# BuildOpenVDB

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  library.h  test.cpp
.github/workflows/: cmake-single-platform.yml
cmake/: SuperBuild.cmake
scripts/: setup_blosc.sh  setup_boost.sh  setup_onetbb.ps1  setup_onetbb.sh  setup_openvdb.sh  setup_zlib.ps1  setup_zlib.sh
setup/: windows.ps1
setup/linux/: blosc.sh  boost.sh  openvdb.sh  setup_blosc.sh  setup_openvdb.sh  tbb.sh  zlib.sh
setup/windows/: blosc.ps1  boost.ps1  openvdb.ps1  setup_blosc.ps1  setup_openvdb.ps1  tbb.ps1  zlib.ps1
test/: CMakeLists.txt  test.cpp  vdb.cpp  vdb.hpp
